dev/styleDev.scss
/*Main Stylesheet*/

/***********************************/
$primaryColor: orangered;
/*vertical space taken by floating header*/
$headerSpace: 14em;
@mixin blackBorder {
    border-style: solid;
    border-color: black;
    border-width: thin;
    box-sizing: border-box;
}
/***********************************/

/*global*/
/***********************************/
html {
    min-height: 100%;
}
body {
    margin: 0;
}
/*remove blue highlighting from hyperlinks*/
a {
    color: inherit;
    text-decoration: none;
}
/*primary div between header and footer*/
#mainView {
    display: block;
}
/***********************************/

/*floating header*/
/***********************************/
header {
    position: fixed;
    top:0;
    left:0;
    background-color: $primaryColor;
    /*fixed height so exact top margin can be used by element below*/
    height: $headerSpace;
    width: 100%;
    @include blackBorder();
    text-align: center;
    h1 {
        font-size: 4.2em;
        padding-top: 0.2em;
        margin: 0;
        font-family: Verdana, Geneva, Tahoma, sans-serif;
        display: inline-block;
    }
}
/*dropdown menu*/
.dropdown {
    position: absolute;
    left: 0;
    display: inline-block;
    height: 3.8em;
}
/*content within dropdown menu*/
.dropdownContent {
    /*hidden while mouse is not hovering over element*/
    display: none;
    width: 100%;
    text-align: left;
    background-color: $primaryColor;
    @include blackBorder();
    margin-top: 6em;
    h2 {
        display: block;
        font-size: 4em;
        /*em used for horizontal spacing in special case where the width required is greater than it's parent (>%100)*/
        padding: 0.6em 5em 0.6em 0;
        width: 100%;
        margin: 0;
        @include blackBorder();
    }
    z-index: 1;
}
/*dropdown menu icon*/
#menuIcon {
    height: 6.5em;
    /*parent is div fit to width, % cannot be used for horizontal spacing here*/
    margin-left: 1em;
    position: absolute;
    left: 0;
    top: 0;
}
/*cart icon*/
#cartIcon {
    position: absolute;
    right: 0;
    top: 0;
    display: inline;
    height: 6em;
    margin: 0.1em 0.9% 0 0;
}
/*hovering over dropdown will display dropdown content*/
.dropdown:hover .dropdownContent {
    display: block;
}
.dropdownItem:active{
    display: none;
}
/*search bar*/
#searchBar {
    font-size: 3em;
    position: absolute;
    height: 1.8em;
    right: 0;
    bottom: 0;
    width: 90%;
    margin: 0 5% 0.4em 5%;
    z-index: -1;
    touch-action: none;
}
#headSpace {
    height: $headerSpace;
}
/***********************************/

/*product*/
/***********************************/
/*root div for products*/
.products {
    display: block;
}
/*individual product*/
.product {
    display: inline-block;
    @include blackBorder();
    width: 100%;
    margin: 1em 2%;
    h2 {
        font-size: 3.6em;
        margin: 1em 0;
    }
    p {
        margin: 0 0 4em 0;
        font-size: 2em;
    }
    label {
        font-size: 3em;
    }
    input {
        font-size: 3em;
        width: 15%;
        text-align: center;
        touch-action: none;
    }
    button {
        background-color: $primaryColor;
        font-size: 3em;
        text-align: center;
    }
    img {
        height: 42em;
        width: 39%;
        display: inline;
        margin: 0.25em 0.6% 0 0.6%;
    }
}
.addCart {
    margin-left: 10%;
}
.updateCart {
    width: 12%;
}
.removeCart {
    margin-left: 10%;
}
.cartQuantity {
    width: 12%;
}
.productText {
    display: inline-block;
    vertical-align: top;
    text-align: left;
    width: 57%;
    padding-top: 1em;
    padding-left: 2%;
}
/***********************************/

/*footer*/
/***********************************/
footer {
    text-align: center;
    bottom: 0;
    left: 0;
    width: 100%;
    padding-bottom: 0.8em;
    background-color: $primaryColor;
    @include blackBorder();
    p {
        margin: 0;
        font-size: 2.3em;
    }
}
/***********************************/

/*cart*/
/***********************************/
#cartHead {
    @include blackBorder();
    text-align: center;
    h2 {
        text-align: left;
        font-size: 3.4em;
        margin-left: 6%;
    }
    button {
        background-color: $primaryColor;
        font-size: 3em;
        text-align: center;
        margin-bottom: 1em;
        width: 80%;
    }
}
/***********************************/

